// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compile should build foobar-arrow.js with ES5 target 1`] = `
""use strict";
Object.defineProperty(exports, "__esModule", { value: true });
exports.getFoobar = void 0;
var getFoobar = function (date) {
    return foobar(date);
};
exports.getFoobar = getFoobar;
var foobar = function (date) {
    return "foobar ".concat(date.toISOString());
};
"
`;

exports[`compile should build foobar-arrow.js with ES2020 target 1`] = `
"export const getFoobar = (date) => {
    return foobar(date);
};
const foobar = (date) => {
    return \`foobar \${date.toISOString()}\`;
};
"
`;

exports[`compile should build foobar-function.js with ES2020 target 1`] = `
"export function getFoobar(date) {
    return foobar(date);
}
function foobar(date) {
    return \`foobar \${date.toISOString()}\`;
}
"
`;
